--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div class="content">
+  <div class="bg"></div>
+  <div class="intro"><h1>Hi! My name is Lance Canlas</h1></div>
+</div>
