--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,1 +1,13 @@
-<p>nav-bar works!</p>
+<header>
+  <div>
+    <nav class="nav-bar">
+      <ul>
+        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="/about">About</a></li>
+        <li><a routerLink="/projects">Projects</a></li>
+        <li><a routerLink="/courses">Courses</a></li>
+        <li><a routerLink="/contact">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
