Finished Home, About, and Contact pages

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,51 +1,27 @@
-<p>about works!</p>
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-
-<p>about works!</p>
+<div id="bg" [ngStyle]="{ backgroundImage: 'url(../assets/road.jpg)' }"></div>
+<div class="content">
+  <div id="main">
+    <span id="about-title">
+      <h1>About Me</h1>
+    </span>
+    <div id="pic"><img src="../assets/portrait.jpg" /></div>
+    <div id="info">
+      <p>
+        I am a 3rd year computer engineering student at the University of
+        Toronto. I plan to focus on software with a minor in AI.
+      </p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore
+        reiciendis culpa debitis laboriosam amet. Id, quidem minima! Officiis,
+        beatae cupiditate nisi ad sapiente placeat ex ducimus eaque esse, libero
+        nobis.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum doloribus
+        quam veritatis recusandae ipsa dolorem totam ipsum, animi iusto eligendi
+        adipisci dicta unde provident. Ducimus suscipit rerum quia nesciunt
+        cumque!
+      </p>
+    </div>
+  </div>
+</div>
