--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,25 @@
-<p>contact works!</p>
+<div id="bg" [ngStyle]="{ backgroundImage: 'url(../assets/road.jpg)' }"></div>
+<div class="content">
+  <div id="main">
+    <span id="contact-title">
+      <h1>Contact Me</h1>
+    </span>
+    <span id="contact-content">
+      <div id="email">
+        <a href="mailto:lancecanlas25@gmail.com">
+          <img src="../assets/email.png"
+        /></a>
+      </div>
+      <div id="linkedin">
+        <a href="https://www.linkedin.com/in/lancecanlas/" target="_blank"
+          ><img src="../assets/linkedin.png"
+        /></a>
+      </div>
+      <div id="github">
+        <a href="https://github.com/canlasla" target="_blank"
+          ><img src="../assets/github.png"
+        /></a>
+      </div>
+    </span>
+  </div>
+</div>
