--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,22 +1,50 @@
-* {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.content {
-  position: center;
-}
-
-.bg {
-  background-image: url("/src/assets/city-background.jpg");
-  height: 100%;
-  background-position: center;
+#bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-position: center;
+  background-size: cover;
 }
 
-.intro {
+#intro {
+  width: 800px;
+  display: block;
+  flex-wrap: wrap;
   top: 50%;
   left: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
+}
+
+#greeting,
+#name {
+  display: block;
+}
+
+h3 {
+  margin-bottom: 0;
+  margin-top: 0;
+  color: whitesmoke;
+  text-align: center;
+  font-size: 60px;
+}
+
+h1 {
+  /* border: 1px solid red; */
+  flex-wrap: nowrap;
+  margin-bottom: 0;
+  margin-top: 0;
+  color: bisque;
+  text-align: center;
+  font-size: 80px;
+}
+
+span {
+  padding: 20px;
+  margin-bottom: 0;
+  margin-top: 0;
+  max-height: 32px;
 }
