--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,9 @@
+<div id="bg" [ngStyle]="{ backgroundImage: 'url(../assets/road.jpg)' }"></div>
 <div class="content">
-  <div class="bg"></div>
-  <div class="intro"><h1>Hi! My name is Lance Canlas</h1></div>
+  <div id="intro">
+    <span id="greeting"><h3>Hey! I'm</h3></span>
+    <span id="name"><h1 id="name">Lance Canlas</h1></span>
+  </div>
 </div>
+
+<!--../assets/bon-echo.jpg-->
