--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div id="bg" [ngStyle]="{ backgroundImage: 'url(../assets/road.jpg)' }"></div>
+<div id="bg" [ngStyle]="{ backgroundImage: 'url(../assets/bg.png)' }"></div>
 <div class="content">
   <div id="main">
     <span id="about-title">
@@ -11,16 +11,14 @@
         Toronto. I plan to focus on software with a minor in AI.
       </p>
       <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore
-        reiciendis culpa debitis laboriosam amet. Id, quidem minima! Officiis,
-        beatae cupiditate nisi ad sapiente placeat ex ducimus eaque esse, libero
-        nobis.
+        I aspire to be a software engineer in the future. My goal is to work
+        with technology that interests me and create things that would help
+        other people in their lives.
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum doloribus
-        quam veritatis recusandae ipsa dolorem totam ipsum, animi iusto eligendi
-        adipisci dicta unde provident. Ducimus suscipit rerum quia nesciunt
-        cumque!
+        Things I do in my spare time is listen to hip hop music, play video
+        games, and hang out with friends. Recently, I have been spending my free
+        time playing chess.
       </p>
     </div>
   </div>
