--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,8 +1,8 @@
-<div id="bg" [ngStyle]="{ backgroundImage: 'url(../assets/road.jpg)' }"></div>
+<div id="bg" [ngStyle]="{ backgroundImage: 'url(../assets/bg.png)' }"></div>
 <div class="content">
   <div id="main">
     <span id="contact-title">
-      <h1>Contact Me</h1>
+      <h1>Let's Connect!</h1>
     </span>
     <span id="contact-content">
       <div id="email">
@@ -10,14 +10,15 @@
           <img src="../assets/email.png"
         /></a>
       </div>
-      <div id="linkedin">
-        <a href="https://www.linkedin.com/in/lancecanlas/" target="_blank"
-          ><img src="../assets/linkedin.png"
-        /></a>
-      </div>
+
       <div id="github">
         <a href="https://github.com/canlasla" target="_blank"
           ><img src="../assets/github.png"
+        /></a>
+      </div>
+      <div id="linkedin">
+        <a href="https://www.linkedin.com/in/lancecanlas/" target="_blank"
+          ><img src="../assets/linkedin.png"
         /></a>
       </div>
     </span>
