--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,2 +1,132 @@
-<div id="bg" [ngStyle]="{ backgroundImage: 'url(../assets/road.jpg)' }"></div>
-<div class="content"></div>
+<div id="bg" [ngStyle]="{ backgroundImage: 'url(../assets/bg.png)' }"></div>
+<div class="content">
+  <div id="main">
+    <div class="card">
+      <div class="project-title">
+        <h4><b>This Website!</b></h4>
+      </div>
+      <div class="appear">
+        <p>
+          This is my first project related to web development! I created this
+          website because I wanted to practice my web developement skills for
+          one of my internships. The technologies used to create this website
+          are <b><i>Angular</i></b
+          >, <b><i>Typescript</i></b
+          >, <b><i>HTML</i></b> and <b><i>CSS</i></b
+          >. From this project, I gained practice in creating Angular
+          components, routers, and modules, and tinkering with HTML and CSS.
+        </p>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="project-title">
+        <h4><b>OnFoot</b></h4>
+      </div>
+      <div class="appear">
+        <p>
+          In 2nd year, one of the main projects for ECE297 is to create a
+          Geographic Information System (GIS) similar to Google Maps. My two
+          colleagues and I created <i>OnFoot</i>. This project required
+          extracting data from a database and storing them in appropriate data
+          structure, creating an interactive map, determining optimal travel
+          routes, and solving a variation of the Travelling Saleman Problem.
+          Technologies used to develop this project include <b><i>C++</i></b
+          >, <b><i>GTK Toolkit,</i></b> and <b><i>Git</i></b> for version
+          control. Check out our demo video
+          <a routerLink="/gis" target="_blank">here</a>.
+        </p>
+      </div>
+    </div>
+
+    <div class="card">
+      <!-- <img src="../assets/linkedin.png" alt="Avatar" style="width: 100%;" /> -->
+
+      <div class="project-title">
+        <h4><b>The Garbage Man</b></h4>
+      </div>
+      <div class="appear">
+        <p>
+          NewHacks 2020 was my first 24-hour hackathon! My team and I created an
+          object identifying robot which was able to collect litter. Our team
+          used a combination of hardware and software to create the
+          <i>The Garbage Man</i>. I learned alot from this hackathon by working
+          with <b><i>Raspberry Pis</i></b
+          >, <b><i>Arduinos</i></b
+          >, and <b><i>Tensorflow</i></b
+          >. Some hardware that was used included servos, motors, and
+          breadboards. The entire experience was exhaustive but rewarding in the
+          end! Check out some pictures
+          <a routerLink="/newhacks" target="_blank">here</a> and check out our
+          devpost
+          <a href="https://devpost.com/software/the-garbage-man" target="_blank"
+            >here</a
+          >.
+        </p>
+      </div>
+    </div>
+
+    <div class="card">
+      <!-- <img src="../assets/linkedin.png" alt="Avatar" style="width: 100%;" /> -->
+
+      <div class="project-title">
+        <h4><b>Project with Peak Power Inc.</b></h4>
+      </div>
+      <div class="appear">
+        <p>
+          In 1st year, my team collaborated with
+          <a href="https://www.peakpowerenergy.com/" target="_blank"
+            >Peak Power Inc.</a
+          >
+          My main role is to communicate information between the client and my
+          team. The main focus was to create an enclosure to house various IoT
+          devices. My team completed research, wrote engineering documents,
+          created prototypes, and ensured that the prototype passes our tests.
+          <b><i>AutoCAD</i></b> was used to create a 3-D model of the prototype.
+          I learned alot from this project such as how to work with a client and
+          solve problems in a team environment to reach our goals.
+        </p>
+      </div>
+    </div>
+
+    <div class="card">
+      <!-- <img src="../assets/linkedin.png" alt="Avatar" style="width: 100%;" /> -->
+
+      <div class="project-title">
+        <h4><b>Reversi AI</b></h4>
+      </div>
+      <div class="appear">
+        <p>
+          This was developed for a school assignment in the Winter Semester of
+          1st year. I created a minimax algorithm that was optimized with
+          alpha-beta pruning. My AI would play against other students in Reversi
+          to compete for the top spot on a leaderboard. My final placement was
+          16<sup>th</sup> out of a pool of 73 students. This was developed in
+          <b><i>C</i></b
+          >.
+        </p>
+      </div>
+    </div>
+
+    <div class="card">
+      <!-- <img src="../assets/linkedin.png" alt="Avatar" style="width: 100%;" /> -->
+
+      <div class="project-title">
+        <h4><b>Typing Maniac</b></h4>
+      </div>
+      <div class="appear">
+        <p>
+          This was my first ever computer project! I started programming for a
+          high school course in 2017 where my first language was
+          <b><i>Python</i></b
+          >. The end of the semester project was to create anything you want! I
+          decided to create a typing game where words would travel from the top
+          of the screen to the bottom. The player would have to type the word
+          before it would reach the bottom of the screen. If the player was too
+          slow, game over! Unfortunately, the code became deprecated, but I plan
+          to recreate it in the near future.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
