--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -25,6 +25,8 @@
 }
 
 h1 {
+  font-family: "IBM Plex Serif";
+
   font-size: 36px;
   text-align: center;
   color: bisque;
@@ -43,22 +45,23 @@ h1 {
 }
 
 img {
+  border: 8px solid rgb(124, 181, 232);
   border-radius: 50%;
   object-fit: contain;
   max-width: 100%;
   max-height: 100%;
 }
 
+#info {
+  /* border: 1px solid red; */
+}
+
 p {
+  border-radius: 10px;
+  color: black;
+  background-color: rgb(124, 181, 232);
+  padding: 10px;
   flex-wrap: wrap;
-  /* display: inline-block;
-  margin-bottom: 0;
-  margin-top: 0; */
-  color: whitesmoke;
   text-align: justify;
   font-size: 18px;
-
-  /*top: 50%;
-  position: absolute;
-  transform: translate(0%, -50%); */
 }
