--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -25,6 +25,8 @@
 }
 
 h3 {
+  font-family: "IBM Plex Serif";
+
   margin-bottom: 0;
   margin-top: 0;
   color: whitesmoke;
@@ -33,6 +35,8 @@ h3 {
 }
 
 h1 {
+  font-family: "IBM Plex Serif";
+
   /* border: 1px solid red; */
   flex-wrap: nowrap;
   margin-bottom: 0;
