--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,7 +1,3 @@
-* {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 .nav-bar {
   text-align: center;
 }
@@ -15,20 +11,26 @@ ul {
   padding: 0;
   margin: 0;
   overflow: hidden;
-  background-color: rgb(51, 51, 51);
+  background-color: rgb(124, 181, 232);
 }
 
 li {
   display: inline-block;
 }
 a {
+  font-family: "IBM Plex Serif";
+
   display: block;
-  color: white;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 li:hover {
-  background-color: rgb(115, 115, 115);
+  background-color: rgb(3, 47, 84);
+}
+
+li:hover > a {
+  color: white;
 }
