--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&display=swap");
+
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "IBM Plex Serif", serif;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateY(0%);
+    /* transform: translateX(-200%); */
+  }
+  100% {
+    transform: translateY(355px);
+    /* transform: translateX(0%); */
+  }
 }
 
 .content {
-  position: center;
+  animation: 0.5s ease-out 0s 1 slide;
 }
