Optimized for mobile viewing

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,14 +1,14 @@
-<div id="bg" [ngStyle]="{ backgroundImage: 'url(../assets/bg.png)' }"></div>
+<div id="bg" [ngStyle]="{ backgroundImage: 'url(assets/bg.png)' }"></div>
 <div class="content">
   <div id="main">
     <span id="about-title">
       <h1>About Me</h1>
     </span>
-    <div id="pic"><img src="../assets/portrait.jpg" /></div>
+    <div id="pic"><img src="assets/portrait.jpg" /></div>
     <div id="info">
       <p>
-        I am a 3rd year computer engineering student at the University of
-        Toronto. I plan to focus on software with a minor in AI.
+        I am a 3<sup>rd</sup> year computer engineering student at the
+        University of Toronto. I plan to focus on software with a minor in AI.
       </p>
       <p>
         I aspire to be a software engineer in the future. My goal is to work
