--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div id="bg" [ngStyle]="{ backgroundImage: 'url(../assets/bg.png)' }"></div>
+<div id="bg" [ngStyle]="{ backgroundImage: 'url(assets/bg.png)' }"></div>
 <div class="content">
   <div id="main">
     <span id="contact-title">
@@ -7,18 +7,18 @@
     <span id="contact-content">
       <div id="email">
         <a href="mailto:lancecanlas25@gmail.com">
-          <img src="../assets/email.png"
+          <img src="assets/email.png"
         /></a>
       </div>
 
       <div id="github">
         <a href="https://github.com/canlasla" target="_blank"
-          ><img src="../assets/github.png"
+          ><img src="assets/github.png"
         /></a>
       </div>
       <div id="linkedin">
         <a href="https://www.linkedin.com/in/lancecanlas/" target="_blank"
-          ><img src="../assets/linkedin.png"
+          ><img src="assets/linkedin.png"
         /></a>
       </div>
     </span>
