--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div id="bg" [ngStyle]="{ backgroundImage: 'url(../assets/bg.png)' }"></div>
+<div id="bg" [ngStyle]="{ backgroundImage: 'url(assets/bg.png)' }"></div>
 <div class="content">
   <div id="intro">
     <span id="greeting"><h3>Hey! I'm</h3></span>
