--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -10,15 +10,26 @@
 }
 
 #main {
-  top: 55%;
+  top: 58%;
   left: 50%;
-  position: fixed;
+  position: absolute;
   transform: translate(-50%, -50%);
-  width: 870px;
-  height: 620px;
+  width: 75%;
+  /* height: 85%; */
+  max-width: 870px;
+  /* max-height: 620px; */
+  height: 100%;
+  text-align: center;
+  display: inline-block;
+}
+
+#projects-title {
+  display: block;
 }
 
 h1 {
+  font-family: "IBM Plex Serif";
+
   font-size: 36px;
   text-align: center;
   color: bisque;
@@ -45,14 +56,16 @@ h4 {
 .card {
   margin: 10px 10px;
   padding: 10px;
-  float: left;
   background-color: rgb(124, 181, 232);
 
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 50%;
-  width: 250px;
-  height: 250px;
+
+  width: 180px;
+  height: 180px;
+
+  display: inline-block;
 }
 
 img {
@@ -62,21 +75,18 @@ img {
 .appear {
   display: none;
   transition: 1s;
-  width: 200px;
 }
 
 .card:hover {
+  border-radius: 10%;
   background-color: rgb(3, 47, 84);
-  transform: scale(1.3);
+  transform: scale(1.4);
 }
 
 .card:hover > .appear {
-  top: 50%;
-  display: block;
-  top: 50%;
-  left: 50%;
-  position: relative;
-  transform: translate(-50%, -50%);
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .card:hover > .project-title {
@@ -84,11 +94,11 @@ img {
 }
 
 p {
-  border-radius: 50%;
   display: block;
-  font-size: 10px;
+  font-size: 8px;
   color: white;
   text-align: justify;
+  width: 97%;
   line-height: 1.4;
 }
 
