--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,6 +1,9 @@
-<div id="bg" [ngStyle]="{ backgroundImage: 'url(../assets/bg.png)' }"></div>
+<div id="bg" [ngStyle]="{ backgroundImage: 'url(assets/bg.png)' }"></div>
 <div class="content">
   <div id="main">
+    <span id="projects-title">
+      <h1>My Projects!</h1>
+    </span>
     <div class="card">
       <div class="project-title">
         <h4><b>This Website!</b></h4>
@@ -8,9 +11,9 @@
       <div class="appear">
         <p>
           This is my first project related to web development! I created this
-          website because I wanted to practice my web developement skills for
-          one of my internships. The technologies used to create this website
-          are <b><i>Angular</i></b
+          website because I wanted to practice my web development skills for one
+          of my internships. The technologies used to create this website are
+          <b><i>Angular</i></b
           >, <b><i>Typescript</i></b
           >, <b><i>HTML</i></b> and <b><i>CSS</i></b
           >. From this project, I gained practice in creating Angular
@@ -25,9 +28,9 @@
       </div>
       <div class="appear">
         <p>
-          In 2nd year, one of the main projects for ECE297 is to create a
-          Geographic Information System (GIS) similar to Google Maps. My two
-          colleagues and I created <i>OnFoot</i>. This project required
+          In 2<sup>nd</sup> year, one of the main projects for ECE297 is to
+          create a Geographic Information System (GIS) similar to Google Maps.
+          My two colleagues and I created <i>OnFoot</i>. This project required
           extracting data from a database and storing them in appropriate data
           structure, creating an interactive map, determining optimal travel
           routes, and solving a variation of the Travelling Saleman Problem.
@@ -40,8 +43,6 @@
     </div>
 
     <div class="card">
-      <!-- <img src="../assets/linkedin.png" alt="Avatar" style="width: 100%;" /> -->
-
       <div class="project-title">
         <h4><b>The Garbage Man</b></h4>
       </div>
@@ -67,40 +68,38 @@
     </div>
 
     <div class="card">
-      <!-- <img src="../assets/linkedin.png" alt="Avatar" style="width: 100%;" /> -->
-
       <div class="project-title">
         <h4><b>Project with Peak Power Inc.</b></h4>
       </div>
       <div class="appear">
         <p>
-          In 1st year, my team collaborated with
+          In 1<sup>st</sup> year, my team collaborated with
           <a href="https://www.peakpowerenergy.com/" target="_blank"
             >Peak Power Inc.</a
           >
-          My main role is to communicate information between the client and my
-          team. The main focus was to create an enclosure to house various IoT
-          devices. My team completed research, wrote engineering documents,
-          created prototypes, and ensured that the prototype passes our tests.
-          <b><i>AutoCAD</i></b> was used to create a 3-D model of the prototype.
-          I learned alot from this project such as how to work with a client and
-          solve problems in a team environment to reach our goals.
+          for a semester project. My main role is to communicate information
+          between the client and my team. The main focus of the project was to
+          create an enclosure to house various IoT devices. My team completed
+          research, wrote engineering documents, created prototypes, and ensured
+          that the prototype passes our tests. <b><i>AutoCAD</i></b> was used to
+          create a 3-D model of the prototype. I learned alot from this project
+          such as how to work with a client and solve problems in a team
+          environment to reach our goals.
         </p>
       </div>
     </div>
 
     <div class="card">
-      <!-- <img src="../assets/linkedin.png" alt="Avatar" style="width: 100%;" /> -->
-
       <div class="project-title">
         <h4><b>Reversi AI</b></h4>
       </div>
       <div class="appear">
         <p>
           This was developed for a school assignment in the Winter Semester of
-          1st year. I created a minimax algorithm that was optimized with
-          alpha-beta pruning. My AI would play against other students in Reversi
-          to compete for the top spot on a leaderboard. My final placement was
+          1<sup>st</sup> year. The problem statement was to create an AI that
+          would play Reversi. I created a minimax algorithm that was optimized
+          with alpha-beta pruning. My AI would play against other students to
+          compete for the top spot on a leaderboard. My final placement was
           16<sup>th</sup> out of a pool of 73 students. This was developed in
           <b><i>C</i></b
           >.
@@ -109,8 +108,6 @@
     </div>
 
     <div class="card">
-      <!-- <img src="../assets/linkedin.png" alt="Avatar" style="width: 100%;" /> -->
-
       <div class="project-title">
         <h4><b>Typing Maniac</b></h4>
       </div>
