--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -10,18 +10,20 @@
 }
 
 #main {
-  top: 50%;
+  top: 60%;
   left: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
-  /* border: 1px solid red; */
-  width: 850px;
+  width: 75%;
+  max-width: 850px;
+  height: 100%;
+  display: inline-block;
+  text-align: center;
+  padding: 50px;
 }
 
 #about-title {
   display: block;
-
-  /* border: 1px solid red; */
 }
 
 h1 {
@@ -35,16 +37,14 @@ h1 {
 
 #pic,
 #info {
-  float: left;
-
-  width: 350px;
-  height: 350px;
   display: inline-block;
-  /* border: 1px solid red; */
-  padding: 0px 30px;
+
+  width: 50%;
+  padding: 20px 30px;
 }
 
 img {
+  margin-top: 5px;
   border: 8px solid rgb(124, 181, 232);
   border-radius: 50%;
   object-fit: contain;
