--- a/src/app/gis/gis.component.css
+++ b/src/app/gis/gis.component.css
@@ -9,10 +9,13 @@
   background-size: cover;
 }
 
+#main {
+  width: 75%;
+}
 video {
   top: 50%;
   left: 50%;
   position: fixed;
   transform: translate(-50%, -50%);
-  width: 750px;
+  width: 85%;
 }
