--- a/src/app/gis/gis.component.html
+++ b/src/app/gis/gis.component.html
@@ -1,6 +1,8 @@
-<div id="bg" [ngStyle]="{ backgroundImage: 'url(../assets/bg.png)' }"></div>
+<div id="bg" [ngStyle]="{ backgroundImage: 'url(assets/bg.png)' }"></div>
 <div class="content">
-  <video src="../assets/demo.mp4" autoplay loop controls>
-    Demonstration of OnFoot GIS, ECE297
-  </video>
+  <div id="main">
+    <video src="assets/demo.mp4" autoplay loop controls>
+      Demonstration of OnFoot GIS, ECE297
+    </video>
+  </div>
 </div>
