--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -2,10 +2,18 @@
   <div>
     <nav class="nav-bar">
       <ul>
-        <li><a routerLink="/">Home</a></li>
-        <li><a routerLink="/about">About</a></li>
-        <li><a routerLink="/projects">Projects</a></li>
-        <li><a routerLink="/contact">Contact</a></li>
+        <li>
+          <a routerLink="/"><b>Home</b></a>
+        </li>
+        <li>
+          <a routerLink="/about"><b>About</b></a>
+        </li>
+        <li>
+          <a routerLink="/projects"><b>Projects</b></a>
+        </li>
+        <li>
+          <a routerLink="/contact"><b>Contact</b></a>
+        </li>
       </ul>
     </nav>
   </div>
