--- a/src/app/newhacks/newhacks.component.css
+++ b/src/app/newhacks/newhacks.component.css
@@ -10,12 +10,12 @@
 }
 
 #main {
-  top: 50%;
+  top: 55%;
   left: 50%;
-  position: fixed;
+  position: absolute;
   transform: translate(-50%, -50%);
-  width: 1000px;
-  height: 400px;
+  /* width: 1000px; */
+  height: 100%;
 }
 
 div.gallery {
@@ -46,6 +46,10 @@ div.desc {
   padding: 0px 6px;
   float: left;
   width: 24.99999%;
+}
+
+video {
+  width: auto;
 }
 
 @media only screen and (max-width: 700px) {
