--- a/src/app/newhacks/newhacks.component.html
+++ b/src/app/newhacks/newhacks.component.html
@@ -1,10 +1,10 @@
-<div id="bg" [ngStyle]="{ backgroundImage: 'url(../assets/bg.png)' }"></div>
+<div id="bg" [ngStyle]="{ backgroundImage: 'url(assets/bg.png)' }"></div>
 <div class="content">
   <div id="main">
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="../assets/newhacks1.jpg">
-          <img src="../assets/newhacks1.jpg" width="600" height="315" />
+        <a target="_blank" href="assets/newhacks1.jpg">
+          <img src="assets/newhacks1.jpg" width="600" height="315" />
         </a>
         <div class="desc">The Team</div>
       </div>
@@ -12,8 +12,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="../assets/newhacks2.jpg">
-          <img src="../assets/newhacks2.jpg" width="600" height="400" />
+        <a target="_blank" href="assets/newhacks2.jpg">
+          <img src="assets/newhacks2.jpg" width="600" height="400" />
         </a>
         <div class="desc">The Garbage Man</div>
       </div>
@@ -21,8 +21,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="../assets/newhacks3.jpg">
-          <img src="../assets/newhacks3.jpg" width="600" height="400" />
+        <a target="_blank" href="assets/newhacks3.jpg">
+          <img src="assets/newhacks3.jpg" width="600" height="400" />
         </a>
         <div class="desc">The Garbage Man before presentations</div>
       </div>
@@ -30,9 +30,9 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="../assets/newhacks4.mp4">
+        <a target="_blank" href="assets/newhacks4.mp4">
           <video
-            src="../assets/newhacks4.mp4"
+            src="assets/newhacks4.mp4"
             loop
             controls
             height="315"
