--- a/src/styles.css
+++ b/src/styles.css
@@ -5,17 +5,15 @@
   font-family: "IBM Plex Serif", serif;
 }
 
-@keyframes slide {
+/* @keyframes slide {
   0% {
     transform: translateY(0%);
-    /* transform: translateX(-200%); */
   }
   100% {
     transform: translateY(355px);
-    /* transform: translateX(0%); */
   }
-}
+} */
 
-.content {
+/* .content {
   animation: 0.5s ease-out 0s 1 slide;
-}
+} */
