Edited about page information

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,12 +8,12 @@
     <div id="info">
       <p>
         I am a 3<sup>rd</sup> year computer engineering student at the
-        University of Toronto. I plan to focus on software with a minor in AI.
+        University of Toronto. I plan to focus on software engineering with a minor in artificial intelligence.
       </p>
       <p>
-        I aspire to be a software engineer in the future. My goal is to work
-        with technology that interests me and create things that would help
-        other people in their lives.
+        I aspire to be a software engineer in the future. My goal is to eagerly learn about new technologies and work
+        with technology to create things that would help
+        other people in their daily lives.
       </p>
       <p>
         Things I do in my spare time is listen to hip hop music, play video
