Edited about section

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,8 +11,8 @@
         University of Toronto. I plan to focus on software engineering with a minor in artificial intelligence.
       </p>
       <p>
-        I aspire to be a software engineer in the future. My goal is to eagerly learn about new technologies and work
-        with technology to create things that would help
+        I aspire to be a software engineer in the future. My goal is to eagerly learn about new technologies so that I
+        can create things that would help
         other people in their daily lives.
       </p>
       <p>
